--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Server side rendering project",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -39,4 +38,3 @@
     "webpack-node-externals": "1.6.0"
   }
 }
-
